--- a/viewcapturelib/build.gradle
+++ b/viewcapturelib/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'sysuigradleproject.android-library-conventions'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.protobuf'
 }
@@ -7,12 +7,8 @@ plugins {
 final String PROTOS_DIR = "${ANDROID_TOP}/frameworks/libs/systemui/viewcapturelib/src/com/android/app/viewcapture/proto"
 
 android {
-    compileSdk TARGET_SDK.toInteger()
-    buildToolsVersion = BUILD_TOOLS_VERSION
-
+    namespace = "com.android.app.viewcapture"
     defaultConfig {
-        minSdkVersion TARGET_SDK.toInteger()
-        targetSdkVersion TARGET_SDK.toInteger()
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -27,15 +23,15 @@ android {
             manifest.srcFile "tests/AndroidManifest.xml"
         }
     }
-
-    lintOptions {
+    lint {
         abortOnError false
     }
+
 }
 
 dependencies {
     implementation "androidx.core:core:1.9.0"
-    implementation "com.google.protobuf:protobuf-lite:${protobuf_version}"
+    implementation "com.google.protobuf:protobuf-lite:${protobuf_lite_version}"
     androidTestImplementation project(':SharedTestLib')
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation "androidx.test:rules:1.4.0"
