--- a/motiontoollib/tests/AndroidManifest.xml
+++ b/motiontoollib/tests/AndroidManifest.xml
@@ -15,23 +15,18 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.app.motiontool">
+    package="com.android.app.motiontool.tests">
 
     <application
         android:debuggable="true"
         android:theme="@android:style/Theme.NoTitleBar">
 
         <activity
-            android:name=".util.TestActivity"
+            android:name="com.android.app.motiontool.util.TestActivity"
             android:exported="false" />
 
         <uses-library android:name="android.test.runner" />
 
     </application>
-
-    <instrumentation
-        android:name="android.testing.TestableInstrumentation"
-        android:label="Tests for MotionTool Lib"
-        android:targetPackage="com.android.app.motiontool"/>
 
 </manifest>
