Revert "Fix test AndroidManifest configuration in udc-dev SysUi Studio."
This reverts commit 59dca6a3b3ef6f1d8fe1e5627f57b80bd7136e59.

Reason for revert: b/276379852

Change-Id: I4da3871d01ea3b32ac26f7ad40017c5838d0ec5a

--- a/motiontoollib/tests/AndroidManifest.xml
+++ b/motiontoollib/tests/AndroidManifest.xml
@@ -15,18 +15,23 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.app.motiontool.tests">
+    package="com.android.app.motiontool">
 
     <application
         android:debuggable="true"
         android:theme="@android:style/Theme.NoTitleBar">
 
         <activity
-            android:name="com.android.app.motiontool.util.TestActivity"
+            android:name=".util.TestActivity"
             android:exported="false" />
 
         <uses-library android:name="android.test.runner" />
 
     </application>
+
+    <instrumentation
+        android:name="android.testing.TestableInstrumentation"
+        android:label="Tests for MotionTool Lib"
+        android:targetPackage="com.android.app.motiontool"/>
 
 </manifest>
