Fix Post-submit failing due to missing test instrumentation.
Bug: 276379852
Test: Post submit test passed with go/abdt
Change-Id: I5a92cbe96d86127bba273f169c52436b55cd1913

--- a/motiontoollib/tests/AndroidManifest.xml
+++ b/motiontoollib/tests/AndroidManifest.xml
@@ -29,4 +29,9 @@
 
     </application>
 
+    <instrumentation
+        android:name="android.testing.TestableInstrumentation"
+        android:label="Tests for MotionTool Lib"
+        android:targetPackage="com.android.app.motiontool.tests"/>
+
 </manifest>
