--- a/viewcapturelib/tests/AndroidManifest.xml
+++ b/viewcapturelib/tests/AndroidManifest.xml
@@ -28,4 +28,9 @@
 
     </application>
 
+    <instrumentation
+        android:name="android.testing.TestableInstrumentation"
+        android:label="Tests for MotionTool Lib"
+        android:targetPackage="com.android.app.viewcapture.test"/>
+
 </manifest>
