--- a/animationlib/build.gradle
+++ b/animationlib/build.gradle
@@ -15,7 +15,7 @@ android {
             manifest.srcFile 'AndroidManifest.xml'
         }
         androidTest {
-            java.srcDirs = ["tests/src"]
+            java.srcDirs = ["tests/src", "tests/robolectric/src"]
             manifest.srcFile 'tests/AndroidManifest.xml'
         }
     }
@@ -37,6 +37,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0"
     implementation "androidx.core:core-animation:1.0.0-alpha02"
     implementation "androidx.core:core-ktx:1.9.0"
+    androidTestImplementation libs.robolectric
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test:rules:1.4.0"
 }
