--- a/toruslib/build.gradle
+++ b/toruslib/build.gradle
@@ -53,6 +53,8 @@ subprojects {
         apply plugin: 'kotlin-android'
 
         android {
+            namespace "com.google.android.torus"
+
             compileSdkVersion versions.compileSdk
             buildToolsVersion versions.buildTools
 
